--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<inst-parent></inst-parent>
+<!--<inst-examples></inst-examples>-->
+
+<hr />
+
+<inst-comp-a></inst-comp-a>
+
+<hr />
+
+<inst-comp-b></inst-comp-b>
